// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`numeric parsing > should parse: +2 1`] = `"+2"`;

exports[`numeric parsing > should parse: +2 2`] = `"+2"`;

exports[`numeric parsing > should parse: +2 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "+2",
  },
]
`;

exports[`numeric parsing > should parse: .1E+10 1`] = `".1E+10"`;

exports[`numeric parsing > should parse: .1E+10 2`] = `".1E+10"`;

exports[`numeric parsing > should parse: .1E+10 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": ".1E+10",
  },
]
`;

exports[`numeric parsing > should parse: .1E-10 1`] = `".1E-10"`;

exports[`numeric parsing > should parse: .1E-10 2`] = `".1E-10"`;

exports[`numeric parsing > should parse: .1E-10 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": ".1E-10",
  },
]
`;

exports[`numeric parsing > should parse: .2.3rem 1`] = `".2"`;

exports[`numeric parsing > should parse: .2.3rem 2`] = `".2 .3"`;

exports[`numeric parsing > should parse: .2.3rem 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": ".2",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "inputId": 0,
      "start": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
    },
    "type": "numeric",
    "unit": "rem",
    "value": ".3",
  },
]
`;

exports[`numeric parsing > should parse: .5deg 1`] = `".5"`;

exports[`numeric parsing > should parse: .5deg 2`] = `".5"`;

exports[`numeric parsing > should parse: .5deg 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "deg",
    "value": ".5",
  },
]
`;

exports[`numeric parsing > should parse: .23rem 1`] = `".23"`;

exports[`numeric parsing > should parse: .23rem 2`] = `".23"`;

exports[`numeric parsing > should parse: .23rem 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "rem",
    "value": ".23",
  },
]
`;

exports[`numeric parsing > should parse: -.3s + 0.5s 1`] = `"-.3"`;

exports[`numeric parsing > should parse: -.3s + 0.5s 2`] = `"-.3 + 0.5"`;

exports[`numeric parsing > should parse: -.3s + 0.5s 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "s",
    "value": "-.3",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "inputId": 0,
      "start": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
    },
    "type": "operator",
    "value": " + ",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "inputId": 0,
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "type": "numeric",
    "unit": "s",
    "value": "0.5",
  },
]
`;

exports[`numeric parsing > should parse: -.3s 1`] = `"-.3"`;

exports[`numeric parsing > should parse: -.3s 2`] = `"-.3"`;

exports[`numeric parsing > should parse: -.3s 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "s",
    "value": "-.3",
  },
]
`;

exports[`numeric parsing > should parse: -.567800E-0012780em 1`] = `"-.567800E-0012780"`;

exports[`numeric parsing > should parse: -.567800E-0012780em 2`] = `"-.567800E-0012780"`;

exports[`numeric parsing > should parse: -.567800E-0012780em 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 20,
        "line": 1,
        "offset": 19,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "em",
    "value": "-.567800E-0012780",
  },
]
`;

exports[`numeric parsing > should parse: -0.5 1`] = `"-0.5"`;

exports[`numeric parsing > should parse: -0.5 2`] = `"-0.5"`;

exports[`numeric parsing > should parse: -0.5 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "-0.5",
  },
]
`;

exports[`numeric parsing > should parse: -2 1`] = `"-2"`;

exports[`numeric parsing > should parse: -2 2`] = `"-2"`;

exports[`numeric parsing > should parse: -2 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "-2",
  },
]
`;

exports[`numeric parsing > should parse: -2px 1`] = `"-2"`;

exports[`numeric parsing > should parse: -2px 2`] = `"-2"`;

exports[`numeric parsing > should parse: -2px 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "px",
    "value": "-2",
  },
]
`;

exports[`numeric parsing > should parse: -16px -1px -1px -16px 1`] = `"-16"`;

exports[`numeric parsing > should parse: -16px -1px -1px -16px 2`] = `"-16 -1 -1 -16"`;

exports[`numeric parsing > should parse: -16px -1px -1px -16px 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "px",
    "value": "-16",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 11,
        "line": 1,
        "offset": 10,
      },
      "inputId": 0,
      "start": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
    },
    "type": "numeric",
    "unit": "px",
    "value": "-1",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 16,
        "line": 1,
        "offset": 15,
      },
      "inputId": 0,
      "start": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
    },
    "type": "numeric",
    "unit": "px",
    "value": "-1",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 22,
        "line": 1,
        "offset": 21,
      },
      "inputId": 0,
      "start": {
        "column": 17,
        "line": 1,
        "offset": 16,
      },
    },
    "type": "numeric",
    "unit": "px",
    "value": "-16",
  },
]
`;

exports[`numeric parsing > should parse: -16px 1`] = `"-16"`;

exports[`numeric parsing > should parse: -16px 2`] = `"-16"`;

exports[`numeric parsing > should parse: -16px 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "px",
    "value": "-16",
  },
]
`;

exports[`numeric parsing > should parse: 0.5 1`] = `"0.5"`;

exports[`numeric parsing > should parse: 0.5 2`] = `"0.5"`;

exports[`numeric parsing > should parse: 0.5 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "0.5",
  },
]
`;

exports[`numeric parsing > should parse: 0.5deg 1`] = `"0.5"`;

exports[`numeric parsing > should parse: 0.5deg 2`] = `"0.5"`;

exports[`numeric parsing > should parse: 0.5deg 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "deg",
    "value": "0.5",
  },
]
`;

exports[`numeric parsing > should parse: 0.5grad 1`] = `"0.5"`;

exports[`numeric parsing > should parse: 0.5grad 2`] = `"0.5"`;

exports[`numeric parsing > should parse: 0.5grad 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "grad",
    "value": "0.5",
  },
]
`;

exports[`numeric parsing > should parse: 0.5rad 1`] = `"0.5"`;

exports[`numeric parsing > should parse: 0.5rad 2`] = `"0.5"`;

exports[`numeric parsing > should parse: 0.5rad 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "rad",
    "value": "0.5",
  },
]
`;

exports[`numeric parsing > should parse: 0.5s + 0.5s 1`] = `"0.5"`;

exports[`numeric parsing > should parse: 0.5s + 0.5s 2`] = `"0.5 + 0.5"`;

exports[`numeric parsing > should parse: 0.5s + 0.5s 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "s",
    "value": "0.5",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "inputId": 0,
      "start": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
    },
    "type": "operator",
    "value": " + ",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 12,
        "line": 1,
        "offset": 11,
      },
      "inputId": 0,
      "start": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
    },
    "type": "numeric",
    "unit": "s",
    "value": "0.5",
  },
]
`;

exports[`numeric parsing > should parse: 0.5s 1`] = `"0.5"`;

exports[`numeric parsing > should parse: 0.5s 2`] = `"0.5"`;

exports[`numeric parsing > should parse: 0.5s 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "s",
    "value": "0.5",
  },
]
`;

exports[`numeric parsing > should parse: 1.5dppx 1`] = `"1.5"`;

exports[`numeric parsing > should parse: 1.5dppx 2`] = `"1.5"`;

exports[`numeric parsing > should parse: 1.5dppx 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "dppx",
    "value": "1.5",
  },
]
`;

exports[`numeric parsing > should parse: 1E+10 1`] = `"1E+10"`;

exports[`numeric parsing > should parse: 1E+10 2`] = `"1E+10"`;

exports[`numeric parsing > should parse: 1E+10 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "1E+10",
  },
]
`;

exports[`numeric parsing > should parse: 1E-10 1`] = `"1E-10"`;

exports[`numeric parsing > should parse: 1E-10 2`] = `"1E-10"`;

exports[`numeric parsing > should parse: 1E-10 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "1E-10",
  },
]
`;

exports[`numeric parsing > should parse: 1E10 1`] = `"1E10"`;

exports[`numeric parsing > should parse: 1E10 2`] = `"1E10"`;

exports[`numeric parsing > should parse: 1E10 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "1E10",
  },
]
`;

exports[`numeric parsing > should parse: 1e -10 1`] = `"1"`;

exports[`numeric parsing > should parse: 1e -10 2`] = `"1 -10"`;

exports[`numeric parsing > should parse: 1e -10 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "e",
    "value": "1",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 7,
        "line": 1,
        "offset": 6,
      },
      "inputId": 0,
      "start": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "-10",
  },
]
`;

exports[`numeric parsing > should parse: 1e 1`] = `"1"`;

exports[`numeric parsing > should parse: 1e 2`] = `"1"`;

exports[`numeric parsing > should parse: 1e 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "e",
    "value": "1",
  },
]
`;

exports[`numeric parsing > should parse: 1e+10 1`] = `"1e+10"`;

exports[`numeric parsing > should parse: 1e+10 2`] = `"1e+10"`;

exports[`numeric parsing > should parse: 1e+10 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "1e+10",
  },
]
`;

exports[`numeric parsing > should parse: 1e-10 1`] = `"1e-10"`;

exports[`numeric parsing > should parse: 1e-10 2`] = `"1e-10"`;

exports[`numeric parsing > should parse: 1e-10 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "1e-10",
  },
]
`;

exports[`numeric parsing > should parse: 1e10 1`] = `"1e10"`;

exports[`numeric parsing > should parse: 1e10 2`] = `"1e10"`;

exports[`numeric parsing > should parse: 1e10 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "1e10",
  },
]
`;

exports[`numeric parsing > should parse: 5 + 5 1`] = `"5"`;

exports[`numeric parsing > should parse: 5 + 5 2`] = `"5 + 5"`;

exports[`numeric parsing > should parse: 5 + 5 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "5",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "inputId": 0,
      "start": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
    },
    "type": "operator",
    "value": " + ",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "inputId": 0,
      "start": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "5",
  },
]
`;

exports[`numeric parsing > should parse: 5 +5 1`] = `"5"`;

exports[`numeric parsing > should parse: 5 +5 2`] = `"5 +5"`;

exports[`numeric parsing > should parse: 5 +5 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "5",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 5,
        "line": 1,
        "offset": 4,
      },
      "inputId": 0,
      "start": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "+5",
  },
]
`;

exports[`numeric parsing > should parse: 5/5 1`] = `"5"`;

exports[`numeric parsing > should parse: 5/5 2`] = `"5/5"`;

exports[`numeric parsing > should parse: 5/5 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "5",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
      "inputId": 0,
      "start": {
        "column": 2,
        "line": 1,
        "offset": 1,
      },
    },
    "type": "operator",
    "value": "/",
  },
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "inputId": 0,
      "start": {
        "column": 3,
        "line": 1,
        "offset": 2,
      },
    },
    "type": "numeric",
    "unit": "",
    "value": "5",
  },
]
`;

exports[`numeric parsing > should parse: 10q 1`] = `"10"`;

exports[`numeric parsing > should parse: 10q 2`] = `"10"`;

exports[`numeric parsing > should parse: 10q 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 4,
        "line": 1,
        "offset": 3,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "q",
    "value": "10",
  },
]
`;

exports[`numeric parsing > should parse: 32deg 1`] = `"32"`;

exports[`numeric parsing > should parse: 32deg 2`] = `"32"`;

exports[`numeric parsing > should parse: 32deg 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "deg",
    "value": "32",
  },
]
`;

exports[`numeric parsing > should parse: 72.3deg 1`] = `"72.3"`;

exports[`numeric parsing > should parse: 72.3deg 2`] = `"72.3"`;

exports[`numeric parsing > should parse: 72.3deg 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 8,
        "line": 1,
        "offset": 7,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "deg",
    "value": "72.3",
  },
]
`;

exports[`numeric parsing > should parse: 500ms 1`] = `"500"`;

exports[`numeric parsing > should parse: 500ms 2`] = `"500"`;

exports[`numeric parsing > should parse: 500ms 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 6,
        "line": 1,
        "offset": 5,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "ms",
    "value": "500",
  },
]
`;

exports[`numeric parsing > should parse: 1138--thx 1`] = `"1138"`;

exports[`numeric parsing > should parse: 1138--thx 2`] = `"1138"`;

exports[`numeric parsing > should parse: 1138--thx 3`] = `
[
  {
    "inputs": [
      {
        "css": "<unknown>",
        "hasBOM": false,
        "id": "<input css [ID]>",
      },
    ],
    "raws": {},
    "source": {
      "end": {
        "column": 10,
        "line": 1,
        "offset": 9,
      },
      "inputId": 0,
      "start": {
        "column": 1,
        "line": 1,
        "offset": 0,
      },
    },
    "type": "numeric",
    "unit": "--thx",
    "value": "1138",
  },
]
`;
